add: uart interface

--- a/g431_esc_test.ioc
+++ b/g431_esc_test.ioc
@@ -139,6 +139,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 OPAMP1.IPParameters=PgaGain,SelfCalibration
 OPAMP1.PgaGain=OPAMP_PGA_GAIN_16_OR_MINUS_15
