--- a/g431_esc_test.ioc
+++ b/g431_esc_test.ioc
@@ -71,6 +71,19 @@ ADC2.ScanConvMode=ADC_SCAN_ENABLE
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FDCAN1.CalculateBaudRateNominal=1000000
+FDCAN1.CalculateTimeBitNominal=1000
+FDCAN1.CalculateTimeQuantumNominal=100.0
+FDCAN1.DataPrescaler=8
+FDCAN1.DataSyncJumpWidth=2
+FDCAN1.DataTimeSeg1=6
+FDCAN1.DataTimeSeg2=3
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN1.NominalPrescaler=17
+FDCAN1.NominalSyncJumpWidth=2
+FDCAN1.NominalTimeSeg1=6
+FDCAN1.NominalTimeSeg2=3
+FDCAN1.StdFiltersNbr=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -78,49 +91,53 @@ Mcu.CPN=STM32G431CBU3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=USART2
-Mcu.IP2=NVIC
-Mcu.IP3=OPAMP1
-Mcu.IP4=OPAMP2
-Mcu.IP5=OPAMP3
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM4
-Mcu.IPNb=11
+Mcu.IP10=TIM4
+Mcu.IP11=USART2
+Mcu.IP2=FDCAN1
+Mcu.IP3=NVIC
+Mcu.IP4=OPAMP1
+Mcu.IP5=OPAMP2
+Mcu.IP6=OPAMP3
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=12
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
-Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
-Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PC10
-Mcu.Pin22=PB3
-Mcu.Pin23=PB4
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8-BOOT0
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_SYS_VS_DBSignals
-Mcu.Pin29=VP_TIM1_VS_no_output4
-Mcu.Pin3=PA0
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=30
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PC10
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8-BOOT0
+Mcu.Pin29=PB9
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_SYS_VS_DBSignals
+Mcu.Pin32=VP_TIM1_VS_no_output4
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
@@ -131,6 +148,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:3\:0\:false\:true\:true\:2\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:true\:true\:true\:3\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -165,6 +184,8 @@ PA10.GPIO_PuPd=GPIO_PULLDOWN
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
+PA11.Mode=FDCAN_Activate
+PA11.Signal=FDCAN1_RX
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA12.GPIO_Label=M1_PWM_VL
 PA12.GPIO_PuPd=GPIO_PULLDOWN
@@ -257,6 +278,9 @@ PB8-BOOT0.GPIOParameters=GPIO_Label
 PB8-BOOT0.GPIO_Label=ENC_Z
 PB8-BOOT0.Locked=true
 PB8-BOOT0.Signal=GPXTI8
+PB9.Locked=true
+PB9.Mode=FDCAN_Activate
+PB9.Signal=FDCAN1_TX
 PC10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC10.GPIO_Label=Start/Stop [PushButton]
 PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -270,6 +294,8 @@ PC13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC13.Locked=true
 PC13.Mode=PWM Generation1 CH1 CH1N
 PC13.Signal=TIM1_CH1N
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -307,7 +333,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_OPAMP1_Init-OPAMP1-false-HAL-true,6-MX_OPAMP2_Init-OPAMP2-false-HAL-true,7-MX_OPAMP3_Init-OPAMP3-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_OPAMP1_Init-OPAMP1-false-HAL-true,6-MX_OPAMP2_Init-OPAMP2-false-HAL-true,7-MX_OPAMP3_Init-OPAMP3-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_FDCAN1_Init-FDCAN1-false-HAL-true
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
